tests/snapshots/formats-link-loki.v3.snap
---
source: tests/harness/formats.rs
expression: json
---
{
  "name": "Loki",
  "ship": {
    "type_id": 29990
  },
  "items": [
    {
      "type_id": 22291,
      "slot": {
        "type": "low",
        "index": 0
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 22291,
      "slot": {
        "type": "low",
        "index": 1
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 19203,
      "slot": {
        "type": "medium",
        "index": 0
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 19289,
      "slot": {
        "type": "medium",
        "index": 1
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 2281,
      "slot": {
        "type": "medium",
        "index": 2
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 17500,
      "slot": {
        "type": "medium",
        "index": 3
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 14142,
      "slot": {
        "type": "medium",
        "index": 4
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 41220,
      "slot": {
        "type": "medium",
        "index": 5
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 14108,
      "slot": {
        "type": "medium",
        "index": 6
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 25715,
      "slot": {
        "type": "high",
        "index": 0
      },
      "quantity": 1,
      "state": "active",
      "charge": {
        "type_id": 24488
      }
    },
    {
      "type_id": 25715,
      "slot": {
        "type": "high",
        "index": 1
      },
      "quantity": 1,
      "state": "active",
      "charge": {
        "type_id": 24488
      }
    },
    {
      "type_id": 25715,
      "slot": {
        "type": "high",
        "index": 2
      },
      "quantity": 1,
      "state": "active",
      "charge": {
        "type_id": 24488
      }
    },
    {
      "type_id": 25715,
      "slot": {
        "type": "high",
        "index": 3
      },
      "quantity": 1,
      "state": "active",
      "charge": {
        "type_id": 24488
      }
    },
    {
      "type_id": 25715,
      "slot": {
        "type": "high",
        "index": 4
      },
      "quantity": 1,
      "state": "active",
      "charge": {
        "type_id": 24488
      }
    },
    {
      "type_id": 30836,
      "slot": {
        "type": "high",
        "index": 5
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 11578,
      "slot": {
        "type": "high",
        "index": 6
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 28756,
      "slot": {
        "type": "high",
        "index": 7
      },
      "quantity": 1,
      "state": "active",
      "charge": {
        "type_id": 30488
      }
    },
    {
      "type_id": 31748,
      "slot": {
        "type": "rig",
        "index": 0
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 31760,
      "slot": {
        "type": "rig",
        "index": 1
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 31588,
      "slot": {
        "type": "rig",
        "index": 2
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 45633,
      "slot": {
        "type": "subsystem",
        "index": 0
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 45595,
      "slot": {
        "type": "subsystem",
        "index": 1
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 45608,
      "slot": {
        "type": "subsystem",
        "index": 2
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 45621,
      "slot": {
        "type": "subsystem",
        "index": 3
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 2456,
      "slot": {
        "type": "drone_bay"
      },
      "quantity": 5,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 2456,
      "slot": {
        "type": "drone_bay"
      },
      "quantity": 3,
      "state": "offline",
      "charge": null
    },
    {
      "type_id": 33700,
      "slot": {
        "type": "cargo"
      },
      "quantity": 1,
      "state": "offline",
      "charge": null
    },
    {
      "type_id": 28668,
      "slot": {
        "type": "cargo"
      },
      "quantity": 150,
      "state": "offline",
      "charge": null
    },
    {
      "type_id": 30486,
      "slot": {
        "type": "cargo"
      },
      "quantity": 16,
      "state": "offline",
      "charge": null
    },
    {
      "type_id": 30488,
      "slot": {
        "type": "cargo"
      },
      "quantity": 16,
      "state": "offline",
      "charge": null
    },
    {
      "type_id": 2679,
      "slot": {
        "type": "cargo"
      },
      "quantity": 330,
      "state": "offline",
      "charge": null
    },
    {
      "type_id": 13856,
      "slot": {
        "type": "cargo"
      },
      "quantity": 9000,
      "state": "offline",
      "charge": null
    },
    {
      "type_id": 24488,
      "slot": {
        "type": "cargo"
      },
      "quantity": 9000,
      "state": "offline",
      "charge": null
    }
  ],
  "character": {
    "skills": {},
    "security_status": 0.0
  },
  "environment": {
    "damage_profile": {
      "em": 0.25,
      "explosive": 0.25,
      "kinetic": 0.25,
      "thermal": 0.25
    },
    "security": "high_sec",
    "reactive_armor": "do_not_adapt"
  }
}
