tests/snapshots/formats-link-tornado.v1.snap
---
source: tests/harness/formats.rs
expression: json
---
{
  "name": "Doom Cannon",
  "ship": {
    "type_id": 4310
  },
  "items": [
    {
      "type_id": 519,
      "slot": {
        "type": "low",
        "index": 0
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 519,
      "slot": {
        "type": "low",
        "index": 1
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 519,
      "slot": {
        "type": "low",
        "index": 2
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 519,
      "slot": {
        "type": "low",
        "index": 3
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 1952,
      "slot": {
        "type": "medium",
        "index": 0
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 1952,
      "slot": {
        "type": "medium",
        "index": 1
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 1952,
      "slot": {
        "type": "medium",
        "index": 2
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 1978,
      "slot": {
        "type": "medium",
        "index": 3
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 1978,
      "slot": {
        "type": "medium",
        "index": 4
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 9491,
      "slot": {
        "type": "high",
        "index": 0
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 9491,
      "slot": {
        "type": "high",
        "index": 1
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 9491,
      "slot": {
        "type": "high",
        "index": 2
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 9491,
      "slot": {
        "type": "high",
        "index": 3
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 9491,
      "slot": {
        "type": "high",
        "index": 4
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 9491,
      "slot": {
        "type": "high",
        "index": 5
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 9491,
      "slot": {
        "type": "high",
        "index": 6
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 9491,
      "slot": {
        "type": "high",
        "index": 7
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 31360,
      "slot": {
        "type": "rig",
        "index": 0
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 31682,
      "slot": {
        "type": "rig",
        "index": 1
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 31324,
      "slot": {
        "type": "rig",
        "index": 2
      },
      "quantity": 1,
      "state": "active",
      "charge": null
    },
    {
      "type_id": 21894,
      "slot": {
        "type": "cargo"
      },
      "quantity": 13329,
      "state": "offline",
      "charge": null
    },
    {
      "type_id": 28332,
      "slot": {
        "type": "cargo"
      },
      "quantity": 3644,
      "state": "offline",
      "charge": null
    }
  ],
  "character": {
    "skills": {},
    "security_status": 0.0
  },
  "environment": {
    "damage_profile": {
      "em": 0.25,
      "explosive": 0.25,
      "kinetic": 0.25,
      "thermal": 0.25
    },
    "security": "high_sec",
    "reactive_armor": "do_not_adapt"
  }
}
